--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -17,11 +17,11 @@
 }
 
 .playlistDisplayText {
-  display: flex;
-  justify-content: flex-start;
+  /* display: flex; */
+  /* justify-content: flex-start; */
   /* cursor: pointer; */
   filter: drop-shadow(0px 0px 5px rgb(255, 0, 0));
-  width: fit-content;
+  width: 140px;
   /* max-width: 120px; */
   overflow: hidden;
   white-space: nowrap;
@@ -33,6 +33,26 @@
   margin-left: 4px;
   filter: drop-shadow(0px 0px 5px rgb(255, 0, 0));
   /* fill: #00ff77; */
+}
+
+.playlistGearIcon {
+  /* margin-right: 6px; */
+  /* z-index: 11; */
+  /* display: none; */
+  user-select: none;
+  opacity: 0;
+  /* transition: .2s; */
+  transition-property: opacity;
+  transition-duration: .6s;
+}
+
+.playlistMenuItem:hover > .playlistGearIcon {
+  opacity: 1;
+}
+
+.playlistGearIcon:hover {
+  /* color: #d9a700; */
+  filter: drop-shadow(0px 0px 4px rgb(0, 0, 0));
 }
 
 .playlistDisplayText:hover {
@@ -60,11 +80,11 @@
 
 .playlistMenu {
   position: absolute;
-  right: 143px;
-  bottom: 106px;
+  right: -61px;
+  bottom: 62px;
   display: none;
   flex-direction: column;
-  background-color: rgba(81, 191, 255, .9);
+  background-color: rgba(60, 151, 203, 0.5);
   border-radius: 3px;
   border: 3px solid rgb(81, 223, 255);
   box-shadow: inset 0px 0px 20px rgb(81, 223, 255);
@@ -87,8 +107,8 @@
   content: " ";
   display: none;
   position: absolute;
-  top: -34%; /* At the bottom of the tooltip */
-  left: 48%;
+  top: 14%; /* At the bottom of the tooltip */
+  left: 107%;
   /* margin-left: -15px; */
   border-width: 20px;
   border-style: solid;
@@ -97,11 +117,15 @@
   animation: pulse_glow_blue 1s alternate ease-in-out infinite;
 }
 
+.playlistHighlight {
+  position: absolute;
+}
+
 @keyframes pulse_glow_blue {
   0% {
-  filter: drop-shadow(0px 0px 3px rgb(81, 223, 255));
+  filter: drop-shadow(0px 0px 4px rgb(81, 223, 255));
   } 100% {
-  filter: drop-shadow(0px 0px 6px rgb(81, 223, 255));
+  filter: drop-shadow(0px 0px 8px rgb(81, 223, 255));
   }
 }
 
@@ -115,11 +139,21 @@
   /* transition-property: height; */
   /* transition-duration: .2s; */
   /* transition: max-height 0.2s ease-out; */
+  /* overflow-y: hidden; */
+  /* white-space: nowrap; */
+  /* text-align: left; */
+  /* text-overflow: ellipsis; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4px 0px;
+  border-bottom: 1px solid rgba(81, 223, 255, 0.729);
 }
 
 .playlistMenuItemBlue {
   /* color: rgb(81, 223, 255); */
-  color: rgb(255, 200, 200);
+  color: rgb(255, 255, 255);
+  filter: drop-shadow(0px 0px 3px rgb(255, 0, 234));
   font-size: 1.1em;
 }
 
@@ -140,10 +174,14 @@
 
 .playlistMenuText {
   /* color: #d9a700; */
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: space-between; */
   color: #ffffff;
   /* filter: drop-shadow(0px 0px 5px rgb(255, 0, 0)); */
   cursor: pointer;
   font-size: 1.1em;
+  width: 100%;
 }
 
 .playlistMenuText:hover {
