--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,3 +55,16 @@ html {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+::-webkit-scrollbar {
+  background: rgba(62, 62, 62, 0.1);
+  border-radius: 20px;
+  height: 10px !important;
+  width: 10px !important;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 0, 98, 0.705);
+  border-radius: 20px;
+  /* -webkit-box-shadow: inset 0 0 5px rgb(93, 166, 255); */
+}
