--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -406,6 +406,19 @@
   /* border-bottom: 1px solid rgba(81, 223, 255, 0.729); */
 }
 
+.noButton {
+  /* text-align: right; */
+  color: #ffffff;
+  font-size: 1.1em;
+  padding: 0px 0px 4px 0px;
+  cursor: pointer;
+  /* border-bottom: 1px solid rgba(81, 223, 255, 0.729); */
+}
+
+.noButton:hover {
+  filter: drop-shadow(0px 0px 5px rgb(0, 221, 255));
+}
+
 .deleteButton {
   /* text-align: right; */
   color: #ff9829;
