--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -456,8 +456,6 @@
   user-select: none;
   cursor: default;
   font-size: 1.1em;
-  border-bottom: 1px solid rgba(81, 223, 255, 0.729);
-  padding: 0px 0px 4px 0px;
 }
 
 .xRemove {
@@ -467,4 +465,26 @@
 .xRemove:hover {
   color: #ff3700;
   filter: drop-shadow(0px 0px 5px rgb(255, 0, 0));
+}
+
+.editTopBar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(81, 223, 255, 0.729);
+  cursor: default;
+  padding: 0px 0px 4px 0px;
+}
+
+.refreshButton {
+  color: rgb(134, 239, 255);
+  /* color: rgba(60, 151, 203, 0.8); */
+  /* background-color: rgba(81, 223, 255, 0.729); */
+  cursor: pointer;
+  font-size: 1.1em;
+}
+
+
+.refreshButton:hover {
+  filter: drop-shadow(0px 0px 5px rgb(0, 221, 255));
 }
