--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -222,7 +222,16 @@
   text-align: center;
   user-select: none;
   cursor: pointer;
-  transition: .1s;
+  transition: .3s;
+}
+
+.playlistPlusNormal {
+  transform: rotate(0deg);
+  transition: .3s;
+}
+.playlistPlusX {
+  transform: rotate(45deg);
+  transition: .3s;
 }
 
 .playlistPlus:hover {
@@ -265,14 +274,14 @@
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: rgba(29, 29, 29, 0.499) transparent transparent transparent;
+  border-color: rgba(0, 0, 0, 0.499) transparent transparent transparent;
 }
 
 .playlistFormContainer {
   width: 230px;
   height: fit-content;
   font-size: .5em;
-  background-color: rgba(29, 29, 29, 0.499);
+  background-color: rgba(0, 0, 0, 0.499);
   text-align: center;
   border-radius: 6px;
   padding: 15px 0px;
@@ -335,7 +344,7 @@
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: rgba(29, 29, 29, 0.499) transparent transparent transparent;
+  border-color: rgba(0, 0, 0, 0.499) transparent transparent transparent;
 }
 
 .playlistAddToForm {
