--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -152,7 +152,8 @@
   align-items: center;
   padding: 4px 10px;
   border-bottom: 1px solid rgba(81, 223, 255, 0.729);
-  background-color: rgba(81, 223, 255, 0.729);
+  /* background-color: rgba(39, 183, 215, 0.729); */
+  box-shadow: inset 10px 0px 22px rgb(81, 223, 255);
 }
 
 .playlistMenuItemActive > .playlistMenuText {
@@ -331,6 +332,7 @@
   justify-content: center;
   align-items: center;
   margin: 0px;
+  padding: 10px 4px 10px 4px
 }
 
 .toolTipText::after {
@@ -507,4 +509,8 @@
 
 .refreshButton:hover {
   filter: drop-shadow(0px 0px 5px rgb(0, 221, 255));
+}
+
+.loadingText {
+  padding: 4px 10px 4px 10px;
 }
