--- a/frontend/src/components/Playlist/Playlist.css
+++ b/frontend/src/components/Playlist/Playlist.css
@@ -1,3 +1,8 @@
+.editPlaylistContainer {
+  /* position: relative; */
+  position: relative;
+}
+
 .playlistDisplayContainer {
   position: absolute;
   left: 550px;
@@ -14,6 +19,12 @@
   background-color: rgb(0, 0, 0);
   padding: 4px 10px;
   border-radius: 6px;
+}
+
+.songList {
+  /* position: block; */
+  margin: 0px;
+  /* will-change: unset; */
 }
 
 .playlistDisplayText {
@@ -144,6 +155,7 @@
   align-items: center;
   padding: 4px 10px;
   border-bottom: 1px solid rgba(81, 223, 255, 0.729);
+  z-index: 100;
 }
 
 .playlistMenuItemActive {
@@ -186,7 +198,7 @@
   display: flex;
   /* justify-content: center; */
   /* overflow-y: scroll; */
-  transition: height 0.2s ease-out;
+  /* transition: height 0.2s ease-out; */
 }
 
 .playlistMenuText {
